src/styles/app/responsive.scss
$phone: 600px;
$tablet: 768px;
$laptop: 992px;
$desktop: 1200px;

body {
    max-width: 100vw;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

img, video {
    width: 100%;
    height: auto;
}

header, footer {
    flex-grow: 0;
}

main {
    flex-grow: 1;
    overflow-y: scroll;
}

@media (min-width: $desktop){
    body{
        max-width: 1600px;
        margin: auto;
    }
}

